fix some alignment issues on navbar

--- a/02-conference-schedule/src/index.css
+++ b/02-conference-schedule/src/index.css
@@ -5,13 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
+  font-family: Rubik, sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+a {
+  text-decoration: none;
+}
 .header_home {
   background: url('./images/hero.png') no-repeat center 0 fixed;
   background-size: cover;
@@ -30,6 +34,11 @@ code {
 }
 .header-nav ul {
   margin: 0;
+  padding: 0;
+  display: inline-block;
+  font-size: 18px;
+  line-height: 44px;
+  list-style: none;
 }
 .header-nav li {
   display: inline-block;
@@ -37,4 +46,42 @@ code {
 }
 .header-nav li a {
   color: #fff;
+  border-bottom: 4px solid transparent;
+  display: inline-block;
+}
+.header-nav .Icon {
+  line-height: 44px;
+  vertical-align: middle;
+}
+
+.Icon {
+  color: #fff;
+  font-size: 28px;
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  text-align: center;
+}
+
+.Button {
+  border-radius: 5px;
+  cursor: pointer;
+  display: inline-block;
+  padding: 8px 25px;
+  text-transform: uppercase;
+}
+
+.header-nav section:last-of-type .Button {
+  margin-left: 25px;
+}
+
+.header-nav section:last-of-type {
+  text-align: right;
+}
+
+.header-nav .Button {
+  margin-left: 25px;
+  color: #fff;
+  border: 1px solid #fff;
+  font-size: 18px;
 }
